Images Format Modifications

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </li>
                 <li></li>
                 <li>
-                  <a href="page2.html">page2</a>
+                  <a href="page2.html">page 2</a>
                 </li>
               </ul>
             </div>
@@ -136,7 +136,7 @@
               </div>
               <h3 class="mg-md text-center">Web design</h3>
               <p class="text-center">
-                Que vous ayez un site web qui a besoin d&rsquo;un
+                Que vous ayez un site web qui a besoin d'un
                 rafraîchissement ou que vous partiez de zéro, laissez-nous vous
                 réaliser un design dont vous serez fier.
               </p>
@@ -147,7 +147,7 @@
                   class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"
                 ></span>
               </div>
-              <h3 class="mg-md text-center">&nbsp;Stratégie</h3>
+              <h3 class="mg-md text-center">Stratégie</h3>
               <p class="text-center">
                 Plutôt que de suggérer des designs à la mode, nous travaillerons
                 avec vous pour comprendre vos objectifs commerciaux afin de vous
@@ -271,7 +271,7 @@
             <div class="col-sm-6">
               <a
                 href="#"
-                data-lightbox="img/3.bmp"
+                data-lightbox="img/3.jpg"
                 data-gallery-id="gallery-1"
                 data-caption="Création d'un site internet pour un voyageur"
                 data-frame="snapshot-lb"
@@ -291,7 +291,7 @@
             <div class="col-sm-6">
               <a
                 href="#"
-                data-lightbox="img/4.bmp"
+                data-lightbox="img/4.jpg"
                 data-gallery-id="gallery-1"
                 data-caption="Conception d'un site pour une agence de mariage"
                 data-frame="snapshot-lb"
