add balise meta validation google search console

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="google-site-verification" content="11CnlPKhJhkJ50J5xf9vmULyuzg4" />
     <meta
       name="keywords"
       content="seo, google, site web, site internet, agence design lyon, agence design, graphisme, mise en page, edition video"
