--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                 data-caption="Conception d'un site pour une agence de mariage"
                 data-frame="snapshot-lb"
                 ><img
-                  src="img/4.jpg"
+                  src="img/1.jpg"
                   class="img-responsive portfolio-thumb"
                   alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage"
               /></a>
@@ -314,7 +314,7 @@
         <div class="container bloc-lg">
           <div class="row">
             <h2 class="mg-md text-center tc-white">
-              Prêt pour redonner vie à votre projet ?<br />Contactez notre
+              Prêt pour redonner vie à votre projet ? Contactez notre
               équipe !
             </h2>
             <div class="col-sm-12 text-center">
@@ -365,11 +365,6 @@
                       ><span class="fa fa-instagram icon-md"></span
                     ></a>
                   </div>
-                </div>
-                <div class="keywords" style="color: #f3976c">
-                  Agence web à paris, stratégie web, web design, illustrations,
-                  design de site web, site web, web, internet, site internet,
-                  site
                 </div>
               </div>
               <div class="row">
