Modifs on CSS and HTML

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <meta
       name="description"
-      content="Site web de l'agence de Design basée à Lyon La Panthère"
+      content="Site web de La Panthère, agence de Web Design basée à Lyon"
     />
     <title>La Panthère</title>
     <!-- Fin Meta Description -->
@@ -288,7 +288,7 @@
                 data-caption="Conception d'un site pour une agence de mariage"
                 data-frame="snapshot-lb"
                 ><img
-                  src="img/1.jpg"
+                  src="img/4.jpg"
                   class="img-responsive portfolio-thumb"
                   alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage"
               /></a>
