Another bunch of modifs after Google ligthouse feedbacks

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 src="img/logo.png"
                 class="center-block image-resize-mode"
                 width="100"
-                alt="Agence La Panthère, agence web paris, création logo paris"
+                alt="Agence La Panthère, agence web Lyon, création logos"
               />
               <h1 class="text-center hero-bloc-text tc-white">
                 Agence La Panthère
@@ -126,7 +126,7 @@
                   class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"
                 ></span>
               </div>
-              <h3 class="mg-md text-center">Web design</h3>
+              <h2 class="mg-md text-center">Web design</h2>
               <p class="text-center">
                 Que vous ayez un site web qui a besoin d'un
                 rafraîchissement ou que vous partiez de zéro, laissez-nous vous
@@ -139,7 +139,7 @@
                   class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"
                 ></span>
               </div>
-              <h3 class="mg-md text-center">Stratégie</h3>
+              <h2 class="mg-md text-center">Stratégie</h2>
               <p class="text-center">
                 Plutôt que de suggérer des designs à la mode, nous travaillerons
                 avec vous pour comprendre vos objectifs commerciaux afin de vous
@@ -152,7 +152,7 @@
                   class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"
                 ></span>
               </div>
-              <h3 class="mg-md text-center">Illustrations</h3>
+              <h2 class="mg-md text-center">Illustrations</h2>
               <p class="text-center">
                 Un bon design n'est rien sans de bonnes illustrations. Laissez
                 faire notre équipe de graphistes talentueux pour donner à vos
@@ -227,7 +227,7 @@
                 data-frame="snapshot-lb"
                 ><img
                   src="img/1.jpg"
-                  alt="paris web design logo agence web meilleure agence et refonte site web journal"
+                  alt="paris web design lyon logo agence web meilleure agence et refonte site web journal"
                   class="img-responsive portfolio-thumb"
               /></a>
               <h3 class="mg-md text-center">
@@ -313,10 +313,10 @@
       >
         <div class="container bloc-lg">
           <div class="row">
-            <h2 class="mg-md text-center tc-white">
+            <h4 class="mg-md text-center tc-white">
               Prêt pour redonner vie à votre projet ? Contactez notre
               équipe !
-            </h2>
+            </h4>
             <div class="col-sm-12 text-center">
               <a
                 href="page2.html"
@@ -340,36 +340,35 @@
               <div class="row row-no-gutters social">
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="index.html"
+                    <a class="social-network fa-twitter" href="index.html"
                       ><span class="fa fa-twitter icon-md"></span
                     ></a>
                   </div>
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="index.html"
+                    <a class="social-network fa-facebook" href="index.html"
                       ><span class="fa fa-facebook icon-md"></span
                     ></a>
                   </div>
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="index.html"
+                    <a class="social-network fa-dribbble" href="index.html"
                       ><span class="fa fa-dribbble icon-md"></span
                     ></a>
                   </div>
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="index.html"
+                    <a class="social-network fa-instagram" href="index.html"
                       ><span class="fa fa-instagram icon-md"></span
                     ></a>
                   </div>
                 </div>
-              </div>
               <div class="row">
-                <div class="col-sm-4">
-                  Partenaires
+                </div>
+                
             </div>
           </div>
         </div>
