New corrections on the SEO page 2

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="google-site-verification" content="11CnlPKhJhkJ50J5xf9vmULyuzg4" />
     <meta
-      name="keywords"
-      content="seo, google, site web, site internet, agence design lyon, agence design, graphisme, mise en page, edition video"
+      name="description"
+      content="Bienvenue sur le site de la Panthère, agence de web design basée à Lyon, l'attout majeur des entreprises pour améliorer leur attractivité et leur visibilité sur Internet"
     />
     <meta
       name="viewport"
@@ -68,7 +68,7 @@
                   <a href="index.html">Accueil</a>
                 </li>
                 <li>
-                  <a href="page2.html">page 2</a>
+                  <a href="page2.html">Contacts</a>
                 </li>
               </ul>
             </div>
@@ -340,35 +340,33 @@
               <div class="row row-no-gutters social">
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social-network fa-twitter" href="index.html"
-                      ><span class="fa fa-twitter icon-md"></span
+                    <a class="social-network" href="index.html"
+                      >Twitter<span class="fa fa-twitter icon-md"></span
                     ></a>
                   </div>
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social-network fa-facebook" href="index.html"
-                      ><span class="fa fa-facebook icon-md"></span
+                    <a class="social-network" href="index.html"
+                      >Facebook<span class="fa fa-facebook icon-md"></span
                     ></a>
                   </div>
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social-network fa-dribbble" href="index.html"
-                      ><span class="fa fa-dribbble icon-md"></span
+                    <a class="social-network" href="index.html"
+                      >Dribble<span class="fa fa-dribbble icon-md"></span
                     ></a>
                   </div>
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social-network fa-instagram" href="index.html"
-                      ><span class="fa fa-instagram icon-md"></span
+                    <a class="social-network" href="index.html"
+                      >Instagram<span class="fa fa-instagram icon-md"></span
                     ></a>
                   </div>
                 </div>
-              <div class="row">
-                </div>
-                
+
             </div>
           </div>
         </div>
