--- a/contacts.html
+++ b/contacts.html
@@ -17,15 +17,16 @@
     <link rel="shortcut icon" type="image/png" href="favicon.jpg" />
 
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="style.min.css" />
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css" />
-    <link rel="stylesheet" type="text/css" href="./css/et-line.min.css" />
+    <link rel="stylesheet" type="text/css" href="./css/et-line.css" />
 
     <script src="./js/jquery-2.1.0.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/blocs.min.js"></script>
-    <script src="./js/jqBootstrapValidation.js"></script>
-    <script src="./js/formHandler.js"></script>
+    <script src="./js/jqBootstrapValidation.min.js"></script>
+    <script src="./js/formHandler.min.js"></script>
+
     <title>Contacts</title>
 
     <!-- Analytics -->
@@ -43,7 +44,7 @@
               <a class="navbar-brand" href="index.html"
                 ><img
                   src="img/agence-la-panthere-monochrome.svg"
-                  alt="atlanta web design logo"
+                  alt="La Panthère web design logo"
                   height="40"
               /></a>
               <button
@@ -63,9 +64,8 @@
                 <li>
                   <a href="index.html">Accueil</a>
                 </li>
-                <li></li>
                 <li>
-                  <a href="page2.html">Contacts</a>
+                  <a href="contacts.html">Contacts</a>
                 </li>
               </ul>
             </div>
@@ -102,12 +102,7 @@
         <div class="container bloc-lg">
           <div class="row">
             <div class="col-sm-6">
-              <form
-                id="form_1"
-                novalidate
-                success-msg="Your message has been sent."
-                fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!"
-              >
+              <form id="form_1"   >
                 <div class="form-group">
                   <label> Nom </label>
                   <input id="name" class="form-control" required />
@@ -163,57 +158,53 @@
 
       <!-- ScrollToTop Button -->
       <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"
-        ><span class="fa fa-chevron-up"></span
-      ></a>
+        ><span class="fa fa-chevron-up"></span>
+      </a>
       <!-- ScrollToTop Button END-->
 
            <!-- Footer - bloc-8 -->
-		   <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
-			<div class="container bloc-sm">
-			  <div class="row">
-				<div class="col-sm-12">
-				  <p class="text-center white">
-					Agence La Panthère - Agence web basée à Lyon.<br />
-				  </p>
-				  <div class="row row-no-gutters social">
-					<div class="col-sm-3">
-					  <div class="text-center">
-						<a class="social-network" href="index.html"
-						  >Twitter<span class="fa fa-twitter icon-md"></span
-						></a>
-					  </div>
-					</div>
-					<div class="col-sm-3">
-					  <div class="text-center">
-						<a class="social-network" href="index.html"
-						  >Facebook<span class="fa fa-facebook icon-md"></span
-						></a>
-					  </div>
-					</div>
-					<div class="col-sm-3">
-					  <div class="text-center">
-						<a class="social-network" href="index.html"
-						  >Dribble<span class="fa fa-dribbble icon-md"></span
-						></a>
-					  </div>
-					</div>
-					<div class="col-sm-3">
-					  <div class="text-center">
-						<a class="social-network" href="index.html"
-						  >Instagram<span class="fa fa-instagram icon-md"></span
-						></a>
-					  </div>
-					</div>
-	
-				</div>
-			  </div>
-			</div>
-		  <!-- Footer - bloc-8 END -->
+      <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+        <div class="container bloc-sm">
+          <div class="row">
+            <div class="col-sm-12">
+              <p class="text-center white">
+                Agence La Panthère - Agence web basée à Lyon.<br />
+              </p>
+              <div class="row row-no-gutters social">
+                <div class="col-sm-3">
+                  <div class="text-center">
+                    <a class="social-network" href="index.html"
+                      >Twitter<span class="fa fa-twitter icon-md"></span
+                    ></a>
+                  </div>
+                </div>
+                <div class="col-sm-3">
+                  <div class="text-center">
+                    <a class="social-network" href="index.html"
+                      >Facebook<span class="fa fa-facebook icon-md"></span
+                    ></a>
+                  </div>
+                </div>
+                <div class="col-sm-3">
+                  <div class="text-center">
+                    <a class="social-network" href="index.html"
+                      >Dribble<span class="fa fa-dribbble icon-md"></span
+                    ></a>
+                  </div>
+                </div>
+                <div class="col-sm-3">
+                  <div class="text-center">
+                    <a class="social-network" href="index.html"
+                      >Instagram<span class="fa fa-instagram icon-md"></span
+                    ></a>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
       <!-- Footer - bloc-8 END -->
     </div>
-    <!-- Principal conteneur END -->
   </body>
 </html>
