--- a/index.html
+++ b/index.html
@@ -14,21 +14,17 @@
     />
     <link rel="shortcut icon" type="image/png" href="favicon.jpg" />
 
-    <link rel="stylesheet" type="text/css" href="./css/bootstrap.css" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <link rel="stylesheet" type="text/css" href="./css/font-awesome.css" />
+    <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="style.min.css" />
+    <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="./css/et-line.css" />
 
-    <script src="./js/jquery-2.1.0.js"></script>
-    <script src="./js/bootstrap.js"></script>
-    <script src="./js/blocs.js"></script>
-    <script src="./js/jquery.touchSwipe.js" defer></script>
-    <script src="./js/gmaps.js"></script>
+    <script src="./js/jquery-2.1.0.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/blocs.min.js"></script>
+    <script src="./js/jquery.touchSwipe.min.js" defer></script>
+    <script src="./js/gmaps.min.js"></script>
 
-    <meta
-      name="description"
-      content="Site web de La Panthère, agence de Web Design basée à Lyon"
-    />
     <title>La Panthère</title>
     <!-- Fin Meta Description -->
 
@@ -37,7 +33,6 @@
     <!-- Analytics END -->
   </head>
   <body>
-    <!-- Principal conteneur -->
     <div class="page-container">
       <!-- bloc-0 -->
       <div class="bloc bgc-white l-bloc" id="bloc-0">
@@ -68,7 +63,7 @@
                   <a href="index.html">Accueil</a>
                 </li>
                 <li>
-                  <a href="page2.html">Contacts</a>
+                  <a href="contacts.html">Contacts</a>
                 </li>
               </ul>
             </div>
@@ -96,7 +91,7 @@
               </h1>
               <div class="text-center">
                 <a
-                  href="page2.html"
+                  href="contacts.html"
                   class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
                   id="cta-hero"
                   >Contact</a
@@ -193,7 +188,7 @@
                 votre site, n’hésitez pas à nous contacter. Nous travaillerons
                 ensemble pour créer des sites beau et bien structurés, qui
                 seront facilement trouvable sur les moteurs de recherche.
-                <br /><br /><a class="ltc-white bold-link" href="page2.html"
+                <br /><br /><a class="ltc-white bold-link" href="contacts.html"
                   >Contactez notre équipe</a
                 ><br />
               </p>
@@ -319,7 +314,7 @@
             </h4>
             <div class="col-sm-12 text-center">
               <a
-                href="page2.html"
+                href="contacts.html"
                 class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero"
                 >Contact</a
               >
@@ -366,13 +361,12 @@
                     ></a>
                   </div>
                 </div>
-
+              </div>
             </div>
           </div>
         </div>
       </div>
       <!-- Footer - bloc-8 END -->
     </div>
-    <!-- Principal conteneur END -->
   </body>
 </html>
