form, responsive and contrasts corrections in html, style.css and bootstrap.css

--- a/contacts.html
+++ b/contacts.html
@@ -102,13 +102,18 @@
         <div class="container bloc-lg">
           <div class="row">
             <div class="col-sm-6">
-              <form id="form_1"   >
+              <form id="form_1">
                 <div class="form-group">
-                  <label> Nom </label>
-                  <input id="name" class="form-control" required />
+                  <label for="name"> Votre Nom </label>
+                  <input 
+                    id="name" 
+                    class="form-control"
+                    type="text" 
+                    required 
+                  />
                 </div>
                 <div class="form-group">
-                  <label> Adresse email </label>
+                  <label for="email"> Adresse email </label>
                   <input
                     id="email"
                     class="form-control"
@@ -117,25 +122,27 @@
                   />
                 </div>
                 <div class="form-group">
-                  <label> Comment nous avez-vous connu ? </label>
+                  <label for="text"> Comment nous avez-vous connu ? </label>
                   <input
-                    class="form-control"
-                    type="email"
-                    required
                     id="input_504"
+                    class="form-control"
+                    type="text"
+                    required
                   />
                 </div>
                 <div class="form-group">
-                  <label>
+                  <label for="message">
                     Brief de votre projet (Ajoutez autant de détails que
-                    nécessaire)<br /> </label
-                  ><textarea
+                    nécessaire)<br /> 
+                  </label>
+                  <textarea
                     id="message"
                     class="form-control"
                     rows="4"
                     cols="50"
                     required
-                  ></textarea>
+                  >
+                  </textarea>
                 </div>
                 <button
                   class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
@@ -162,7 +169,7 @@
       </a>
       <!-- ScrollToTop Button END-->
 
-           <!-- Footer - bloc-8 -->
+      <!-- Footer - bloc-8 -->
       <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
         <div class="container bloc-sm">
           <div class="row">
@@ -170,7 +177,7 @@
               <p class="text-center white">
                 Agence La Panthère - Agence web basée à Lyon.<br />
               </p>
-              <div class="row row-no-gutters social">
+              <div class="row-row-no-gutters-social">
                 <div class="col-sm-3">
                   <div class="text-center">
                     <a class="social-network" href="index.html"
