--- a/contacts.html
+++ b/contacts.html
@@ -122,7 +122,7 @@
                   />
                 </div>
                 <div class="form-group">
-                  <label for="text"> Comment nous avez-vous connu ? </label>
+                  <label for="input_504"> Comment nous avez-vous connu ? </label>
                   <input
                     id="input_504"
                     class="form-control"
