correct uncrwalable link in contacts

--- a/contacts.html
+++ b/contacts.html
@@ -164,9 +164,9 @@
       <!-- bloc-7 END -->
 
       <!-- ScrollToTop Button -->
-      <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"
+      <span class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"
         ><span class="fa fa-chevron-up"></span>
-      </a>
+      </span>
       <!-- ScrollToTop Button END-->
 
       <!-- Footer - bloc-8 -->
