images optimizations(webP) and contrasts adjustments

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <div class="row tight-width-whitespace">
             <div class="col-sm-12">
               <img
-                src="img/logo.png"
+                src="img/webP/logo.svg"
                 class="center-block image-resize-mode"
                 width="100"
                 alt="Agence La Panthère, agence web Lyon, création logos"
@@ -110,7 +110,7 @@
             <div class="col-sm-12 text-center">
               <img
                 alt="agence web, agence web paris, web design paris, stratégie web"
-                src="img/title.png"
+                src="img/webP/title.webp"
               />
             </div>
           </div>
@@ -208,7 +208,7 @@
             <div class="col-sm-12 text-center">
               <img
                 alt="agence web, agence web paris, web design paris, stratégie web"
-                src="img/title2.png"
+                src="img/webP/title2.webp"
               />
             </div>
           </div>
