--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="google-site-verification" content="11CnlPKhJhkJ50J5xf9vmULyuzg4" />
+    <meta
+      name="google-site-verification"
+      content="11CnlPKhJhkJ50J5xf9vmULyuzg4"
+    />
     <meta
       name="description"
       content="Bienvenue sur le site de la Panthère, agence de web design basée à Lyon, l'attout majeur des entreprises pour améliorer leur attractivité et leur visibilité sur Internet"
@@ -38,7 +41,7 @@
       <div class="bloc bgc-white l-bloc" id="bloc-0">
         <div class="container bloc-sm">
           <nav class="navbar row">
-            <div class="navbar-header"> 
+            <div class="navbar-header">
               <a class="navbar-brand" href="index.html"
                 ><img
                   src="img/agence-la-panthere-monochrome.svg"
@@ -108,10 +111,10 @@
         <div class="container bloc-md">
           <div class="row">
             <div class="col-sm-12 text-center">
-              <img
-                alt="agence web, agence web paris, web design paris, stratégie web"
-                src="img/webP/title.webp"
-              />
+              <p class="text-center">
+                L'agence La Panthère est une agence de web design qui aide les
+                entreprises à devenir attractives et visibles sur Internet.
+              </p>
             </div>
           </div>
           <div class="row voffset-lg med-width-whitespace">
@@ -123,9 +126,9 @@
               </div>
               <h2 class="mg-md text-center">Web design</h2>
               <p class="text-center">
-                Que vous ayez un site web qui a besoin d'un
-                rafraîchissement ou que vous partiez de zéro, laissez-nous vous
-                réaliser un design dont vous serez fier.
+                Que vous ayez un site web qui a besoin d'un rafraîchissement ou
+                que vous partiez de zéro, laissez-nous vous réaliser un design
+                dont vous serez fier.
               </p>
             </div>
             <div class="col-sm-4">
@@ -157,10 +160,15 @@
           </div>
           <div class="row voffset-lg voffset">
             <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-              <img
-                alt="agence web, agence web paris, web design paris, stratégie web"
-                src="img/citation.png"
-              />
+              <p class="text-center">
+                "L'agence La Panthère est une excellente agence web ! Les web
+                designers ont réussi à capturer l'essence de notre entreprise et
+                à l'intégrer à notre site. Cela nous a aidé àdoubler nos ventes
+                en ligne à Lyon"
+              </p>
+              <p class="text-center">
+                Maxime Guibard, PDG de à vos fourchettes
+              </p>
             </div>
           </div>
         </div>
@@ -206,10 +214,9 @@
         <div class="container bloc-lg">
           <div class="row">
             <div class="col-sm-12 text-center">
-              <img
-                alt="agence web, agence web paris, web design paris, stratégie web"
-                src="img/webP/title2.webp"
-              />
+              <p class="text-center">
+                Nous travaillons avec beaucoup de clients, voici nos réalisations.
+              </p>
             </div>
           </div>
           <div class="row tight-width-whitespace portfolio-row">
@@ -309,8 +316,7 @@
         <div class="container bloc-lg">
           <div class="row">
             <h4 class="mg-md text-center tc-white">
-              Prêt pour redonner vie à votre projet ? Contactez notre
-              équipe !
+              Prêt pour redonner vie à votre projet ? Contactez notre équipe !
             </h4>
             <div class="col-sm-12 text-center">
               <a
